--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2604,6 +2604,7 @@ input, select, textarea {
 			}
 
 	a.icon.style2:before {
+		font-size: 29px;
 		-moz-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 		-webkit-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
