--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,3 +23,40 @@
 .school {
     font-weight: 700;
 }
+
+footer {
+    /* background-color: #17479f; */
+}
+
+#test {
+    background-image: url(https://lifegram-seeds.s3.amazonaws.com/swiss.jpg);
+    min-height: 493px; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#facts-parent {
+    display: grid;
+}
+
+#facts {
+    background: #ffffffdb;
+    border-radius: 12px;
+    width: 70%;
+    place-self: center;
+    padding: 35px;
+}
+
+#facts:hover {
+    background: white;
+    border-radius: 12px;
+    width: 70%;
+    place-self: center;
+    padding: 35px;
+}
+
+#facts > p {
+    margin: 1rem 0;
+}
